--- a/pepeizqs deals web/Pages/Componentes/Admin/Noticias.razor
+++ b/pepeizqs deals web/Pages/Componentes/Admin/Noticias.razor
@@ -283,6 +283,7 @@ else if (noticiaTipoSeleccionada == NoticiaTipo.Rumores.ToString())
         using (conexion)
         {
             noticia = new Plantilla();
+            noticia.Fecha = DateTime.Now;
 
             noticiaTipoSeleccionada = texto.Value.ToString();
 
